--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "npm": "6.4.1"
     },
     "dependencies": {
+        "danbooru": "^3.1.0",
         "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
         "winston": "^3.2.1"
     },
@@ -19,5 +20,5 @@
     "repository": {
         "type": "git",
         "url": "git+https://github.com/deechimaru/TamamoBot.git"
-  }
+    }
 }
