--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "npm": "6.4.1"
     },
     "dependencies": {
-        "danbooru": "^3.1.0",
+        "booru": "^2.0.2",
         "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
         "winston": "^3.2.1"
     },
